--- a/shop4recipes/src/app/components/header/header.component.html
+++ b/shop4recipes/src/app/components/header/header.component.html
@@ -1,3 +1,25 @@
-<div class="container">
-    <h1>The header</h1>
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Recipe Book</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Recipes <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Shopping</a>
+            </li>
+        </ul>
+        <ul class="nav navbar-nav-right">
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#" id="save">Save Data</a></li>
+                    <li><a href="#" id="fetch">Fetch Data</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+  </nav>
