--- a/shop4recipes/src/app/components/recipes/recipe-edit/recipe-edit.component.html
+++ b/shop4recipes/src/app/components/recipes/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,127 @@
-<p>recipe-edit works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+            <div class="row">
+                <div class="col-xs-12">
+                    <button 
+                        type="submit"
+                        [disabled]="!recipeForm.valid" 
+                        class="btn btn-success"
+                    >Save</button>
+                    <button 
+                        type="button" 
+                        (click)="onCancel()"
+                        class="btn btn-danger"
+                    >Cancel</button>
+                </div>
+            </div>
+
+            <!-- Recipe name -->
+
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input 
+                            type="text" 
+                            id="name"
+                            formControlName="name" 
+                            class="form-control"
+                        >
+                    </div>
+                </div>
+            </div>
+
+            <!-- Recipe image -->
+
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="imagePath">Image Url</label>
+                        <input 
+                            type="text" 
+                            id="imagePath" 
+                            formControlName="imagePath" 
+                            #imagePath
+                            class="form-control"
+                        >
+                    </div>
+                </div>
+            </div>
+
+            <!-- Recipe image preview -->
+
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <img [src]="imagePath.value" class="img-responsive">
+                    </div>
+                </div>
+            </div>
+
+            <!-- Recipe description -->
+
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="description">Description</label>
+                        <textarea 
+                            type="text" 
+                            id="description" 
+                            formControlName="description" 
+                            class="form-control"
+                            rows="6"
+                        ></textarea>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Recipe ingredients -->
+
+            <div class="row">
+                <div class="col-xs-12" formArrayName="ingredients">
+                    <div 
+                        class="row" 
+                        *ngFor="let ingredientCtrl of controls; let i = index"
+                        [formGroupName]="i"
+                        style="margin-top: 10px;"
+                    >
+                        <div class="col-xs-8">
+                            <input
+                                type="text" 
+                                class="form-control"
+                                formControlName="name"
+                            > 
+                        </div>
+                        <div class="col-xs-2">
+                            <input
+                                type="number" 
+                                class="form-control"
+                                formControlName="amount"
+                            > 
+                        </div>
+                        <div class="col-xs-2">
+                            <button 
+                                type="button"
+                                (click)="onDeleteIngredient(i)"
+                                class="btn btn-danger"
+                                >X
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <hr>
+                        <div class="col-xs-12">
+                            <button 
+                                type="button" 
+                                class="btn btn-success" 
+                                (click)="onAddIngredient()"
+                            >Add ingredient
+                        </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
